--- a/templates/intervention/consulter.html.twig
+++ b/templates/intervention/consulter.html.twig
@@ -1,3 +1,6 @@
+{% extends 'base.html.twig' %}
+
+{% block content %}
 <!DOCTYPE html>
 <html>
     <head>
@@ -17,3 +20,5 @@
         </p>
        </body>
 </html>
+
+{% endblock %}
