--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,20 +21,20 @@
         {% if is_granted('ROLE_GESTIONNAIRE') %}
                 <ul>
                     <li><a href="#" class="active"><i class="fas fa-home"></i>&nbsp&nbsp Accueil</a></li>
-                    <li><a href="http://localhost/test/25lilian31/public/gestionnaire/instrument/lister"><i class="fas fa-keyboard"></i>&nbsp&nbsp Instrument</a></li>
-                    <li><a href="http://localhost/test/25lilian31/public/gestionnaire/cours/lister"><i class="fas fa-book"></i>&nbsp&nbsp Cours</a></li>
-                    <li><a href="http://localhost/test/25lilian31/public/gestionnaire/inscription/lister"><i class="fas fa-user-plus"></i>&nbsp&nbsp Inscription</a></li>
-                    <li><a href="http://localhost/test/25lilian31/public/gestionnaire/eleve/lister"><i class="fas fa-child"></i>&nbsp&nbsp Eleve</a></li>
-                    <li><a href="http://localhost/test/25lilian31/public/gestionnaire/professeur/lister"><i class="fas fa-chalkboard-teacher"></i>&nbsp&nbsp Professeur</a></li>
-                    <li><a href="http://localhost/test/25lilian31/public/gestionnaire/intervention/lister"><i class="fas fa-wrench"></i>&nbsp&nbsp Intervention</a></li>
-                    <li><a href="http://localhost/test/25lilian31/public/gestionnaire/professionnel/lister"><i class="fas fa-user-tie"></i>&nbsp;&nbsp; Professionnel</a></li>
-                    <li><a href="http://localhost/test/25lilian31/public/gestionnaire/accessoire/lister"><i class="fas fa-cogs"></i>&nbsp;&nbsp; Accessoire</a></li>
-                    <li><a href="http://localhost/test/25lilian31/public/gestionnaire/responsable/lister"><i class="fas fa-users-cog"></i>&nbsp;&nbsp; Responsable</a></li>
+                    <li><a href="http://172.20.177.77/lilian31/public/gestionnaire/instrument/lister"><i class="fas fa-keyboard"></i>&nbsp&nbsp Instrument</a></li>
+                    <li><a href="http://172.20.177.77/lilian31/public/gestionnaire/cours/lister"><i class="fas fa-book"></i>&nbsp&nbsp Cours</a></li>
+                    <li><a href="http://172.20.177.77/lilian31/public/gestionnaire/inscription/lister"><i class="fas fa-user-plus"></i>&nbsp&nbsp Inscription</a></li>
+                    <li><a href="http://172.20.177.77/lilian31/public/gestionnaire/eleve/lister"><i class="fas fa-child"></i>&nbsp&nbsp Eleve</a></li>
+                    <li><a href="http://172.20.177.77/lilian31/public/gestionnaire/professeur/lister"><i class="fas fa-chalkboard-teacher"></i>&nbsp&nbsp Professeur</a></li>
+                    <li><a href="http://172.20.177.77/lilian31/public/gestionnaire/intervention/lister"><i class="fas fa-wrench"></i>&nbsp&nbsp Intervention</a></li>
+                    <li><a href="http://172.20.177.77/lilian31/public/gestionnaire/professionnel/lister"><i class="fas fa-user-tie"></i>&nbsp;&nbsp; Professionnel</a></li>
+                    <li><a href="http://172.20.177.77/lilian31/public/gestionnaire/accessoire/lister"><i class="fas fa-cogs"></i>&nbsp;&nbsp; Accessoire</a></li>
+                    <li><a href="http://172.20.177.77/lilian31/public/gestionnaire/responsable/lister"><i class="fas fa-users-cog"></i>&nbsp;&nbsp; Responsable</a></li>
                 </ul>
             {% elseif is_granted('ROLE_ETUDIANT') %}
                 <ul>
-                    <li><a href="http://localhost/test/25lilian31/public/etudiant/eleve/lister"><i class="fas fa-child"></i>&nbsp&nbsp Eleve</a></li>
-                    <li><a href="http://localhost/test/25lilian31/public/etudiant/cours/lister"><i class="fas fa-book"></i>&nbsp&nbsp Cours</a></li>
+                    <li><a href="http://172.20.177.77/lilian31/public/etudiant/eleve/lister"><i class="fas fa-child"></i>&nbsp&nbsp Eleve</a></li>
+                    <li><a href="http://172.20.177.77/lilian31/public/etudiant/cours/lister"><i class="fas fa-book"></i>&nbsp&nbsp Cours</a></li>
                 </ul>
             {% endif %}
     
