--- a/templates/professeur/lister.html.twig
+++ b/templates/professeur/lister.html.twig
@@ -128,10 +128,28 @@
     .popup.open, .popup-overlay.open {
         display: block;
     }
+
+    .add-btn {
+        display: inline-block;
+        background-color: #4CAF50;
+        color: white;
+        font-size: 1rem;
+        padding: 10px 20px;
+        border-radius: 5px;
+        text-decoration: none;
+        margin-bottom: 30px;
+        transition: background-color 0.3s ease;
+    }
+
+    .add-btn:hover {
+        background-color: #45a049;
+    }
+
+
 </style>
 
 <h1>Liste des professeurs</h1>
-
+<a href="{{ path('professeurAjouter') }}" class="add-btn">Ajouter un professeur</a>
 <div class="professeur-grid">
     {% for p in pProfesseurs %}
     <div class="professeur-item">
