--- a/templates/instrument/lister.html.twig
+++ b/templates/instrument/lister.html.twig
@@ -287,7 +287,6 @@
     margin-bottom: 20px;
 }
 
-/* Conteneur du formulaire */
 .ajouter-formulaire-ajout {
     background-color: #181B22;
     border-radius: 20px;
@@ -373,12 +372,10 @@
     font-size: 36px;
     font-weight: bold;
     text-align: center;
-    color: #4CAF50; /* Green accent */
+    color: #4CAF50;
     margin-bottom: 20px;
 }
 
-
-/* Conteneur du formulaire */
 .ajouter-cours-formulaire-ajout {
     background-color: #181B22;
     border-radius: 20px;
