--- a/templates/cours/ajouter.html.twig
+++ b/templates/cours/ajouter.html.twig
@@ -25,11 +25,10 @@ body {
     font-size: 36px;
     font-weight: bold;
     text-align: center;
-    color: #4CAF50; /* Green accent */
+    color: #4CAF50; 
     margin-bottom: 20px;
 }
 
-/* Conteneur du formulaire */
 .ajouter-cours-formulaire-ajout {
     background-color: #181B22;
     border-radius: 20px;
