--- a/templates/eleve/gestionnaireListerEleve.html.twig
+++ b/templates/eleve/gestionnaireListerEleve.html.twig
@@ -53,7 +53,6 @@
         font-size: 1.2rem;
     }
 
-    /* Boutons */
     .info-btn, .delete-btn, .action-btn {
         display: block;
         margin-top: 10px;
@@ -100,7 +99,6 @@
         display: block;
     }
 
-    /* Popup Styles */
     .popup {
         display: none;
         position: fixed;
@@ -131,7 +129,6 @@
         display: block;
     }
 
-    /* Tab Styles */
     .tabs {
         margin-bottom: 10px;
     }
@@ -318,7 +315,7 @@
         document.querySelectorAll('.modify-btn').forEach(button => {
     button.addEventListener('click', function(event) {
         event.preventDefault();
-        const eleveId = this.dataset.id; // ID récupéré depuis l'attribut data-id
+        const eleveId = this.dataset.id; 
         if (eleveId) {
             window.location.href = `{{ path('gestionnaireModifierEleve', { 'id': '__ID__' }) }}`.replace('__ID__', eleveId);
         } else {
@@ -334,7 +331,6 @@
     button.addEventListener('click', function(event) {
         event.preventDefault();
         const eleveId = this.dataset.id;
-        // Vérification de l'ID avant de procéder
         if (eleveId) {
             window.location.href = `{{ path('gestionnaireSupprimerEleve', { 'id': '__ID__' }) }}`.replace('__ID__', eleveId);
         } else {
