--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -22,9 +22,9 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column; /* Assure que le contenu est empilé verticalement */
+    flex-direction: column; 
     width: 100%;
-    max-width: 900px; /* Limite la largeur maximale de la div */
+    max-width: 900px; 
     padding: 20px;
 }
 
@@ -40,11 +40,11 @@ body {
     background-color: #181B22;
     border-radius: 20px;
     padding: 20px;
-    width: 100%; /* Prend toute la largeur disponible de la div parente */
-    max-width: 800px; /* Largeur maximale du formulaire */
+    width: 100%; 
+    max-width: 800px; 
     display: flex;
-    flex-wrap: wrap; /* Permet l'adaptation du formulaire sur plusieurs lignes si nécessaire */
-    justify-content: center; /* Centre le contenu dans la div du formulaire */
+    flex-wrap: wrap;
+    justify-content: center; 
     gap: 40px;
     align-items: flex-start;
 }
